experimental fix to deco visibility bug

--- a/src/web/www/style.css
+++ b/src/web/www/style.css
@@ -1051,3 +1051,7 @@ svg.rail line.unsorted {
   font-family: 'Helvetica Neue';
   color: var(--top-bar-text);
 }
+
+svg {
+  overflow: visible;
+}
